force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_SatisfactoryTestSpace__c.field-meta.xml
<CustomField>
    <fullName>FSM_SatisfactoryTestSpace__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <inlineHelpText>All Levels</inlineHelpText>
    <label>Satisfactory test undertaken on space</label>
    <type>Checkbox</type>
</CustomField>