force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_SatisfactoryTestSpaceComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_SatisfactoryTestSpaceComments__c</fullName>
    <description>SFS-4203</description>
    <inlineHelpText>All Levels</inlineHelpText>
    <label>Satisfactory test Space comments</label>
    <type>TextArea</type>
</CustomField>