force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_SecureSite__c.field-meta.xml
<CustomField>
    <fullName>FSM_SecureSite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Secure site</label>
    <type>Checkbox</type>
</CustomField>