force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_SecureSiteComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_SecureSiteComments__c</fullName>
    <description>SFS-4203</description>
    <label>Secure site comments</label>
    <type>TextArea</type>
</CustomField>