force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ServiceResource__c.field-meta.xml
<CustomField>
    <fullName>FSM_ServiceResource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look-up to Service resource SFI-35</description>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Data Capture Form Non Infras</relationshipLabel>
    <relationshipName>Data_Capture_Form_Non_Infras</relationshipName>
    <type>Lookup</type>
</CustomField>