force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ServiceTerritory__c.field-meta.xml
<CustomField>
    <fullName>FSM_ServiceTerritory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as part of SFI-35 for record sharing based on territory and for future use as well</description>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Data Capture Form Non Infras</relationshipLabel>
    <relationshipName>Data_Capture_Form_Non_Infras</relationshipName>
    <type>Lookup</type>
</CustomField>