force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ShortText__c.field-meta.xml
<CustomField>
    <fullName>FSM_ShortText__c</fullName>
    <description>SFS-4795</description>
    <label>Short Text</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SLUOEQ</fullName>
                <label>Bioresources – Equipment</label>
            </value>
            <value>
                <fullName>STUOEQ</fullName>
                <label>Waste Water Recycling – Equipment</label>
            </value>
            <value>
                <fullName>WPUOEQ</fullName>
                <label>Water Treatment – Equipment</label>
            </value>
            <value>
                <fullName>WPUOPR</fullName>
                <label>Water Treatment – Operations</label>
            </value>
            <value>
                <fullName>WPUOWQ</fullName>
                <label>Water Treatment – Quality</label>
            </value>
            <value>
                <fullName>SEUPEQP</fullName>
                <label>Waste Water Recycling-SPS</label>
            </value>
            <value>
                <fullName>SLUONON</fullName>
                <isActive>false</isActive>
                <label>Bioresources – Non Equipment</label>
            </value>
            <value>
                <fullName>STUONON</fullName>
                <isActive>false</isActive>
                <label>Waste Water Recycling – Non Equipment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>