force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ShortTextCode__c.field-meta.xml
<CustomField>
    <fullName>FSM_ShortTextCode__c</fullName>
    <description>SFS-4795</description>
    <label>Short Text for Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FSM_ShortText__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASC1</fullName>
                <label>Assist Contractor WP Operations</label>
            </value>
            <value>
                <fullName>WAWK</fullName>
                <label>Customer Reported Works Problem</label>
            </value>
            <value>
                <fullName>DECH</fullName>
                <label>Deliver Chemicals to site</label>
            </value>
            <value>
                <fullName>EFEL</fullName>
                <label>Equipment Failed Electrical</label>
            </value>
            <value>
                <fullName>EFIN</fullName>
                <label>Equipment Failed Instrument</label>
            </value>
            <value>
                <fullName>EFMC</fullName>
                <label>Equipment Failed Mechanical</label>
            </value>
            <value>
                <fullName>EFME</fullName>
                <label>Equipment Failed MS Electrical</label>
            </value>
            <value>
                <fullName>EFMI</fullName>
                <label>Equipment Failed MS Instrument</label>
            </value>
            <value>
                <fullName>EFMM</fullName>
                <label>Equipment Failed MS Mechanical</label>
            </value>
            <value>
                <fullName>EFOP</fullName>
                <label>Equipment Failed Operator</label>
            </value>
            <value>
                <fullName>EREL</fullName>
                <label>Equipment Req Attention Electrical</label>
            </value>
            <value>
                <fullName>ERIN</fullName>
                <label>Equipment Req Attention Instrument</label>
            </value>
            <value>
                <fullName>ERMC</fullName>
                <label>Equipment Req Attention Mechanical</label>
            </value>
            <value>
                <fullName>ERME</fullName>
                <label>Equipment Req Attention MS Electrical</label>
            </value>
            <value>
                <fullName>ERMI</fullName>
                <label>Equipment Req Attention MS Instrument</label>
            </value>
            <value>
                <fullName>ERMM</fullName>
                <label>Equipment Req Attention MS Mechanical</label>
            </value>
            <value>
                <fullName>EROP</fullName>
                <label>Equipment Req Attention Operator</label>
            </value>
            <value>
                <fullName>CHDE</fullName>
                <label>Receive Chemical Delivery</label>
            </value>
            <value>
                <fullName>SAF2</fullName>
                <label>Safety Related WP Maintenance</label>
            </value>
            <value>
                <fullName>SAF1</fullName>
                <label>Safety Related WP Operations</label>
            </value>
            <value>
                <fullName>SEC1</fullName>
                <label>Security WP Operations</label>
            </value>
            <value>
                <fullName>SLAM</fullName>
                <label>Sludge req attention Maintainer</label>
            </value>
            <value>
                <fullName>SELF</fullName>
                <label>Urgent task - assign to self</label>
            </value>
            <value>
                <fullName>WQFL</fullName>
                <label>Water Quality Issues</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>