force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ShortTextDescription__c.field-meta.xml
<CustomField>
    <fullName>FSM_ShortTextDescription__c</fullName>
    <description>SFS-4795</description>
    <label>Short text description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>