force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_SignageComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_SignageComments__c</fullName>
    <description>SFS-3065</description>
    <label>Signage comments</label>
    <type>TextArea</type>
</CustomField>