force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_Site__c.field-meta.xml
<CustomField>
    <fullName>FSM_Site__c</fullName>
    <description>Created as a part of SFS-3065</description>
    <label>Site</label>
    <length>100</length>
    <type>Text</type>
</CustomField>