force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_SiteLocationToBeVisited__c.field-meta.xml
<CustomField>
    <fullName>FSM_SiteLocationToBeVisited__c</fullName>
    <description>SFS-4203</description>
    <label>Site or Location to be visited</label>
    <type>TextArea</type>
</CustomField>