force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_SoapCleanerBarrierCream__c.field-meta.xml
<CustomField>
    <fullName>FSM_SoapCleanerBarrierCream__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Soap/cleaner/barrier cream</label>
    <type>Checkbox</type>
</CustomField>