force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_SoapCleanerBarrierCreamComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_SoapCleanerBarrierCreamComments__c</fullName>
    <description>SFS-4203</description>
    <label>Soap/cleaner/barrier cream comments</label>
    <type>TextArea</type>
</CustomField>