force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_SSOWRiskAssessment__c.field-meta.xml
<CustomField>
    <fullName>FSM_SSOWRiskAssessment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>SSOW risk assessment &amp; emergency details</label>
    <type>Checkbox</type>
</CustomField>