force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_SSOWRiskAssessmentComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_SSOWRiskAssessmentComments__c</fullName>
    <description>SFS-4203</description>
    <label>SSOW risk assessment comments</label>
    <type>TextArea</type>
</CustomField>