force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_Status__c.field-meta.xml
<CustomField>
    <fullName>FSM_Status__c</fullName>
    <description>SFI-35</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>IN progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>