force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_StormTankChecks__c.field-meta.xml
<CustomField>
    <fullName>FSM_StormTankChecks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-3065</description>
    <label>Storm Tank checks</label>
    <type>Checkbox</type>
</CustomField>