force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_StormTankComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_StormTankComments__c</fullName>
    <description>SFS-3065</description>
    <label>Storm Tank Comments</label>
    <type>TextArea</type>
</CustomField>