force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_Strength__c.field-meta.xml
<CustomField>
    <fullName>FSM_Strength__c</fullName>
    <description>Created as part of SFS-3063</description>
    <label>Strength</label>
    <length>255</length>
    <type>Text</type>
</CustomField>