force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_STWLocation__c.field-meta.xml
<CustomField>
    <fullName>FSM_STWLocation__c</fullName>
    <description>Created as part of SFS-3063</description>
    <label>STW Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>