force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_STWOperatorToWithdraw__c.field-meta.xml
<CustomField>
    <fullName>FSM_STWOperatorToWithdraw__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STW Operator to withdraw outside exclusi</label>
    <type>Checkbox</type>
</CustomField>