force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_STWStaff__c.field-meta.xml
<CustomField>
    <fullName>FSM_STWStaff__c</fullName>
    <description>Created as part of SFS-3063</description>
    <inlineHelpText>Contact person(s)</inlineHelpText>
    <label>STW Staff</label>
    <length>80</length>
    <type>Text</type>
</CustomField>