force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_SufficientSpace__c.field-meta.xml
<CustomField>
    <fullName>FSM_SufficientSpace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sufficient space to accept delivery?</label>
    <type>Checkbox</type>
</CustomField>