force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_TankNumber1__c.field-meta.xml
<CustomField>
    <fullName>FSM_TankNumber1__c</fullName>
    <description>Only data type of this field changed from Number to Text as part of bug SFS-4361</description>
    <label>Tank Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>