force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_TeamName1__c.field-meta.xml
<CustomField>
    <fullName>FSM_TeamName1__c</fullName>
    <description>SFS-4203</description>
    <label>Team Name 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>