force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_TeamName3__c.field-meta.xml
<CustomField>
    <fullName>FSM_TeamName3__c</fullName>
    <description>SFS-4203</description>
    <label>Team Name 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>