force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_Telephone_number_STW__c.field-meta.xml
<CustomField>
    <fullName>FSM_Telephone_number_STW__c</fullName>
    <label>Telephone number</label>
    <type>Phone</type>
</CustomField>