force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_TelephoneNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_TelephoneNumber__c</fullName>
    <label>Telephone Number(s)</label>
    <type>Phone</type>
</CustomField>