force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_TelephoneNumberDeliveryDriver__c.field-meta.xml
<CustomField>
    <fullName>FSM_TelephoneNumberDeliveryDriver__c</fullName>
    <description>Created as part of SFS-3063
Updated as part of SFS-6577</description>
    <label>Telephone Number(s): Delivery Driver</label>
    <length>11</length>
    <type>Text</type>
</CustomField>