force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_TelephoneNumberSTWStaff__c.field-meta.xml
<CustomField>
    <fullName>FSM_TelephoneNumberSTWStaff__c</fullName>
    <description>Created as part of SFS-3063</description>
    <label>Telephone Number(s): STW Staff</label>
    <length>11</length>
    <type>Text</type>
</CustomField>