force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_TestCommunicationSystems__c.field-meta.xml
<CustomField>
    <fullName>FSM_TestCommunicationSystems__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Test communication systems</label>
    <type>Checkbox</type>
</CustomField>