force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_TestCommunicationSystemsComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_TestCommunicationSystemsComments__c</fullName>
    <description>SFS-4203</description>
    <label>Test communication systems comments</label>
    <type>TextArea</type>
</CustomField>