force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_TopManName__c.field-meta.xml
<CustomField>
    <fullName>FSM_TopManName__c</fullName>
    <description>SFS-4203</description>
    <label>Top-Man Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>