force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_TripodWinchManRidingHoist__c.field-meta.xml
<CustomField>
    <fullName>FSM_TripodWinchManRidingHoist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Tripod, winch, man riding hoist</label>
    <type>Checkbox</type>
</CustomField>