force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_TripodWinchManRidingHoistComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_TripodWinchManRidingHoistComments__c</fullName>
    <description>SFS-4203</description>
    <label>Tripod, winch, man riding hoist comments</label>
    <type>TextArea</type>
</CustomField>