force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_UnderstandhowSTWstaffcanstopdeliver__c.field-meta.xml
<CustomField>
    <fullName>FSM_UnderstandhowSTWstaffcanstopdeliver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Understand how STWstaff can stop deliver</label>
    <type>Checkbox</type>
</CustomField>