force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_ValveComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_ValveComments__c</fullName>
    <description>Created as a part of SFS-3065</description>
    <label>Valve Comments</label>
    <type>TextArea</type>
</CustomField>