force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_vehicleCheck__c.field-meta.xml
<CustomField>
    <fullName>FSM_vehicleCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for SFS-2003</description>
    <label>Is the vehicle check complete?</label>
    <type>Checkbox</type>
</CustomField>