force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_VentilateSpace__c.field-meta.xml
<CustomField>
    <fullName>FSM_VentilateSpace__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Ventilate space (natural/forced)</label>
    <type>Checkbox</type>
</CustomField>