force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_VentilateSpaceComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_VentilateSpaceComments__c</fullName>
    <description>SFS-4203</description>
    <label>Ventilate space(natural/forced) comments</label>
    <type>TextArea</type>
</CustomField>