force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_VisibilityStructuralCondition__c.field-meta.xml
<CustomField>
    <fullName>FSM_VisibilityStructuralCondition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Check visibility &amp; structural condition</label>
    <type>Checkbox</type>
</CustomField>