force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_VisibilityStructuralConditionComment__c.field-meta.xml
<CustomField>
    <fullName>FSM_VisibilityStructuralConditionComment__c</fullName>
    <description>SFS-4203</description>
    <label>Visibility,strucutral condition comments</label>
    <type>TextArea</type>
</CustomField>