force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_WashOffDisinfect__c.field-meta.xml
<CustomField>
    <fullName>FSM_WashOffDisinfect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Wash off disinfect-entry team/equipment</label>
    <type>Checkbox</type>
</CustomField>