force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_WashOffDisinfectComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_WashOffDisinfectComments__c</fullName>
    <description>SFS-4203</description>
    <label>Wash off disinfect comments</label>
    <type>TextArea</type>
</CustomField>