force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_WaterproofGloves__c.field-meta.xml
<CustomField>
    <fullName>FSM_WaterproofGloves__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <inlineHelpText>suitable for task being carried out .</inlineHelpText>
    <label>Waterproof gloves/gauntlets</label>
    <type>Checkbox</type>
</CustomField>