force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_WaterproofGlovesComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_WaterproofGlovesComments__c</fullName>
    <description>SFS-4203</description>
    <inlineHelpText>suitable for task being carried out</inlineHelpText>
    <label>Waterproof gloves/gauntlets comments</label>
    <type>TextArea</type>
</CustomField>