force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_WaterproofOveralls__c.field-meta.xml
<CustomField>
    <fullName>FSM_WaterproofOveralls__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Waterproof overalls</label>
    <type>Checkbox</type>
</CustomField>