force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_WaterproofOverallsComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_WaterproofOverallsComments__c</fullName>
    <description>SFS-4203</description>
    <label>Waterproof overalls comments</label>
    <type>TextArea</type>
</CustomField>