force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_WeatherConditionsOk__c.field-meta.xml
<CustomField>
    <fullName>FSM_WeatherConditionsOk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-4203</description>
    <label>Are the weather conditions ok to proceed</label>
    <type>Checkbox</type>
</CustomField>