force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_WeatherConditionsOkComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_WeatherConditionsOkComments__c</fullName>
    <description>SFS-4203</description>
    <label>weather conditions ok to proceed comment</label>
    <type>TextArea</type>
</CustomField>