force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_WellCleanliness__c.field-meta.xml
<CustomField>
    <fullName>FSM_WellCleanliness__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as a part of SFS-3065</description>
    <label>Well Cleanliness Checks</label>
    <type>Checkbox</type>
</CustomField>