force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_WellCleanlinessComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_WellCleanlinessComments__c</fullName>
    <description>Created as a part of SFS-3065</description>
    <label>Well Cleanliness Comments</label>
    <type>TextArea</type>
</CustomField>