force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_WetWellChecks__c.field-meta.xml
<CustomField>
    <fullName>FSM_WetWellChecks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as a part of SFS-3065</description>
    <label>Wet well checks</label>
    <type>Checkbox</type>
</CustomField>