force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_WorkingSetApparatusComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_WorkingSetApparatusComments__c</fullName>
    <description>SFS-4203</description>
    <label>Working set breathing apparatus comments</label>
    <type>TextArea</type>
</CustomField>