force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>FSM_WorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Work Order Lookup SFI-35</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Data Capture Form Non Infras</relationshipLabel>
    <relationshipName>Data_Capture_Form_Non_Infras</relationshipName>
    <type>Lookup</type>
</CustomField>