force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/fields/FSM_WWChecksComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_WWChecksComments__c</fullName>
    <description>Created as a part of SFS-3065</description>
    <label>WW Checks Comments</label>
    <type>TextArea</type>
</CustomField>