force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/recordTypes/FSM_CleanWaterChemicalAcceptance.recordType-meta.xml
<RecordType>
    <fullName>FSM_CleanWaterChemicalAcceptance</fullName>
    <active>true</active>
    <label>Clean Water Chemical Acceptance</label>
</RecordType>