force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/recordTypes/FSM_ConfinedSpacesPreEntryChecklist.recordType-meta.xml
<RecordType>
    <fullName>FSM_ConfinedSpacesPreEntryChecklist</fullName>
    <active>true</active>
    <description>SF-4203</description>
    <label>Confined Spaces Pre Entry Checklist</label>
</RecordType>