force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/recordTypes/FSM_NoninfraRaiseneworfollowonwork.recordType-meta.xml
<RecordType>
    <fullName>FSM_NoninfraRaiseneworfollowonwork</fullName>
    <active>true</active>
    <label>Non-infra Raise new or follow on work</label>
</RecordType>