force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/recordTypes/FSM_SPSComplex.recordType-meta.xml
<RecordType>
    <fullName>FSM_SPSComplex</fullName>
    <active>true</active>
    <label>SPS Complex</label>
</RecordType>