force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/recordTypes/FSM_ValveManagement.recordType-meta.xml
<RecordType>
    <fullName>FSM_ValveManagement</fullName>
    <active>true</active>
    <label>Valve Management</label>
</RecordType>