force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/recordTypes/FSM_vehicleCheck.recordType-meta.xml
<RecordType>
    <fullName>FSM_vehicleCheck</fullName>
    <active>true</active>
    <description>Created for SFS-2003</description>
    <label>Vehicle Check</label>
</RecordType>