force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/recordTypes/FSM_WasteWaterBioChemicalAcceptance.recordType-meta.xml
<RecordType>
    <fullName>FSM_WasteWaterBioChemicalAcceptance</fullName>
    <active>true</active>
    <label>Waste Water &amp; Bio Chemical Acceptance</label>
</RecordType>