force-app/main/default/objects/FSM_DataCaptureFormNonInfra__c/recordTypes/FSM_WorkingSetPreUseInspection.recordType-meta.xml
<RecordType>
    <fullName>FSM_WorkingSetPreUseInspection</fullName>
    <active>true</active>
    <label>Working Set Pre Use Inspection</label>
</RecordType>